# web_crawler

./: .gitignore  CMakeLists.txt
docs/: build_log.md  build_log_July22.txt  crawler_design.md  design_journal.md  design_journal_July11.md
docs/journals/: design_journal_July10.md  design_journal_July14.md  design_journal_July16.md  design_journal_July17.md  design_journal_July18.md  design_journal_July22.md  design_journal_July9.md
include/: CrawlStats.h  DynamicArray.h  HTMLParser.h  HTTPClient.h  HashMap.h  LinkedList.h  Logger.h  PageStorage.h  RedisCLI.h  RobotsChecker.h  SeenURLStore.h  URLFrontier.h
src/: HTMLParser.cpp  HTTPClient.cpp  Logger.cpp  PageStorage.cpp  RobotsChecker.cpp  SeenURLStore.cpp  URLFrontier.cpp  main.cpp
tests/: CMakeLists.txt
